tests/valid/StaticVar_Valid_11.whiley
int var = 1

public export method test():
    assert var == 1
    var = var + 1
    assert var == 2