tests/invalid/Tuple_Invalid_11.whiley
public export method test():
    (final int x, int y) = (1,2)
    x = 1
    y = 1